[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
ohos-ffrt-sys = { path = "crates/sys", version = "0.1.0" }
ohos-ffrt = { path = "crates/ffrt", version = "0.1.0" }
ohos-ext = { path = "crates/ext", version = "0.1.0" }
ohos-ext-macro = { path = "crates/macro", version = "0.1.0" }

once_cell = "1"
futures = "0.3"
libc = "0.2"
async-std = "*"


napi-ohos = { path = "../ohos-rs/crates/napi" }
napi-derive-ohos = { path = "../ohos-rs/crates/macro" }
napi-build-ohos = { path = "../ohos-rs/crates/build" }


[lints.clippy]
non_upper_case_globals = "allow"