[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
ohos-ffrt-sys = { path = "crates/sys", version = "0.1.0" }
ohos-ffrt = { path = "crates/ffrt", version = "0.1.0" }
ohos-ext = { path = "crates/ext", version = "0.1.0" }
ohos-ext-macro = { path = "crates/macro", version = "0.1.0" }

futures = "0.3"

napi-ohos = { version = "1.1.4" }
napi-derive-ohos = { version = "1.1.4" }
napi-build-ohos = { version = "1.1.4" }

[workspace.lints.clippy]
non_upper_case_globals = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
