[package]
name = "ohos-ext"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ohos ffrt ext for ohos-rs"

[dependencies]
ohos-ext-macro = { workspace = true }
ohos-ffrt = { workspace = true }
ohos-ffrt-sys = { workspace = true }
napi-ohos = { workspace = true }
futures = { workspace = true }
