[package]
name = "ohos-ffrt-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ohos ffrt system bindings"

[dependencies]

[features]
default = []
api-13 = []
api-14 = ["api-13"]
api-15 = ["api-14"]
api-16 = ["api-15"]
api-17 = ["api-16"]
api-18 = ["api-17"]
api-19 = ["api-18"]
api-20 = ["api-19"]
