[package]
name = "hello"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { workspace = true, default-features = false, features = ["napi8"] }
napi-derive-ohos = { workspace = true }
ohos-ext = { workspace = true }

ohos-hilog-binding = { version = "*" }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
